--- a/index.html
+++ b/index.html
@@ -312,11 +312,11 @@
 
     <div class="asset-config-row">
         <div class="input-group">
-            <label id="assetALabel" for="qqqVal">QQQ 當前市值 (K 美元)</label>
+            <label id="assetALabel" for="qqqVal">核心當前市值 (K 美元)</label>
             <input type="number" id="qqqVal" placeholder="例如: 8.50">
         </div>
         <div class="input-group">
-            <label id="assetBLabel" for="jepiVal">BND 當前市值 (K 美元)</label>
+            <label id="assetBLabel" for="jepiVal">衛星當前市值 (K 美元)</label>
             <input type="number" id="jepiVal" placeholder="例如: 1.50">
         </div>
     </div>
@@ -542,3 +542,4 @@
 
 </body>
 </html>
+
