--- a/index.html
+++ b/index.html
@@ -109,11 +109,15 @@
             font-size: 0.9rem;
             color: var(--screen-label);
             font-weight: 500;
+            /* ✨ 修正：使用 align-items: center 確保文字垂直對齊 */
+            align-items: center; 
         }
         .screen-display .percentage {
-             font-size: 1.2rem;
-             color: var(--screen-text);
-             font-weight: 700;
+            font-size: 1.2rem;
+            color: var(--screen-text);
+            font-weight: 700;
+            /* ✨ 修正：微調行高 */
+            line-height: 1.1; 
         }
 
         /* ------------------------------------- */
