--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
             border: none;
             border-radius: 20px; 
             font-weight: 600;
+            font-size: 0.9rem;
             cursor: pointer;
             transition: all 0.2s ease; 
             color: var(--text-primary);
