--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             --active-color: var(--highlight-light); 
             
             /* 狀態顏色 */
-            --status-ok-border: var(--highlight-color);
-            --status-warn-border: #CC0000;
+            --status-ok-border: #15CF74;
+            --status-warn-border: #F23645;
             --action-border: #9AA4AE;
             --dca-border: var(--highlight-color);
 
@@ -254,8 +254,8 @@
             padding: 15px 10px;
             border: none;
             border-radius: 20px; 
-            font-weight: 600;
             font-size: 0.9rem;
+            font-weight: 600;
             cursor: pointer;
             transition: all 0.2s ease; 
             color: var(--text-primary);
@@ -268,6 +268,8 @@
             color: var(--highlight-text);
             box-shadow: var(--inner-shadow-light); 
             transform: scale(0.98);
+            font-size: 0.9rem;
+            font-weight: 600;
         }
         
         button#calculate-btn {
