--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             padding: 15px 10px;
             border: none;
             border-radius: 20px; 
-            font-size: 0.9rem;
+            font-size: 0.9rem; /* <-- 確保所有按鈕都有呢個大小 */
             font-weight: 600;
             cursor: pointer;
             transition: all 0.2s ease; 
@@ -268,7 +268,7 @@
             background-color: var(--active-color);
             color: var(--highlight-text);
             box-shadow: var(--inner-shadow-light); 
-            transform: scale(0.98);
+            transform: scale(0.99);
             font-size: 0.9rem;
             font-weight: 600;
         }
