--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             /* 強調色 (淺藍色) */
             --highlight-color: #635AF0; 
-            --highlight-light: #9A87FF; 
+            --highlight-light: #7F70FF; 
             --highlight-text: #FFFFFF;
 
             /* Neumorphism 陰影 (柔和光暈感) */
@@ -672,4 +672,5 @@
 
 </body>
 </html>
+
 
